<resources>
    <string name="app_name">2048</string>
    <string name="score">分数</string>
    <string name="bestscore">最佳</string>
    <string name="restart">返回目录</string>
    <string name="how">合并数字得到2048</string>
    <string name="school">北京交通大学</string>
    <string name="college">计算机与信息技术学院</string>
    <string name="clas">计科1501</string>
    <string name="name1">任晓宇</string>
    <string name="name2">郝雪晴</string>
    <string name="name3">寇雨洁</string>

</resources>
