<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/launch"
    android:orientation="vertical"
    >


    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="64dp"
        android:text="@string/school"
        android:textColor="#ffffff"
        android:textSize="32dp"
        android:font="font/FZCY"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:gravity="center"
        android:text="@string/college"
        android:textColor="#ffffff"
        android:textSize="32dp"
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:gravity="center"
        android:text="@string/clas"
        android:textColor="#ffffff"
        android:textSize="32dp"
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:gravity="center"
        android:text="@string/name1"
        android:textColor="#ffffff"
        android:textSize="32dp"
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:gravity="center"
        android:text="@string/name2"
        android:textColor="#ffffff"
        android:textSize="32dp"
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:gravity="center"
        android:text="@string/name3"
        android:textColor="#ffffff"
        android:textSize="32dp"
        />
    <Button
        android:id="@+id/button3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:background="@android:color/transparent"
        android:textColor="#ffffff"
        android:text="@string/restart"
        android:textSize="32dp"
        />
</LinearLayout>
