<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.renxiaoyu.game2048_2.MainActivity">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:id = "@+id/button"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "2048"
                android:textSize="100dp"
                android:textColor="#bbada0"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingLeft="32dp"
                android:paddingRight="8dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#bbada0"
                    android:textColor="#ffffff"
                    android:text="@string/score"
                    android:textSize="32dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"

                    />
                <TextView
                    android:id="@+id/tvScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text = "0"
                    android:textSize="32dp"
                    android:gravity="center"
                    android:textColor="#bbada0"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="0dp"
                >

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bestscore"
                    android:background="#bbada0"
                    android:textColor="#ffffff"
                    android:textSize="32dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    />


                <TextView
                    android:id="@+id/tvBest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="32dp"
                    android:gravity="center"
                    android:textColor="#bbada0"
                    />
                <Button
                    android:id="@+id/rsbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#bbada0"
                    android:textColor="#ffffff"
                    android:layout_gravity="center"
                    android:text="@string/restart" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <com.example.renxiaoyu.game2048_2.GameView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </com.example.renxiaoyu.game2048_2.GameView>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how"
            android:textColor="#bbada0"
            android:textSize="38dp"
            android:paddingTop="38dp"
            android:paddingBottom="80dp"
            android:layout_gravity="center"
            />
    </LinearLayout>



</LinearLayout>
